unpackaged/main/default/objects/Product_Request_Definition__c/Product_Request_Definition__c.object-meta.xml
<CustomObject>
    <label>Product Request Definition</label>
    <nameField>
        <label>Product Request Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Request Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>