unpackaged/main/default/objects/Product_Request_Definition__c/fields/Eligibility_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Requirements__c</fullName>
    <label>Eligibility Requirements</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>