unpackaged/main/default/objects/Product_Request_Definition__c/fields/Product_Description_Short__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_Short__c</fullName>
    <label>Product Description (Short)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>