unpackaged/main/default/objects/Product_Request_Definition__c/fields/Subproduct_Name__c.field-meta.xml
<CustomField>
    <fullName>Subproduct_Name__c</fullName>
    <label>Subproduct Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>