unpackaged/main/default/objects/Product_Request_Definition__c/fields/Valid_Segments__c.field-meta.xml
<CustomField>
    <fullName>Valid_Segments__c</fullName>
    <label>Valid Segments</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>